<resources>
    <string name="app_name">Guess</string>
    <string name="inputnum">Input How Many Tries</string>
    <string name="startgame">Start Game</string>
    <string name="inputaint">input a int number here</string>
    <string name="toolow">Too Low</string>
    <string name="toohigh">Too High</string>
    <string name="you_lost">You Lost!</string>
    <string name="you_won">You Won!</string>
    <string name="your_score">\nYour \n Score</string>
    <string name="correct_number">\nMissed \n Number</string>
    <string name="score_top10">\nTOP 10</string>
    <string name="retryimage">retryimage</string>
    <string name="homeimage">homeimage</string>
    <string name="new_top10">\nNEW top 10 Score\nEnter your name</string>
    <string name="enter_name_here">\nEnter name here</string>
    <string name="ok_button">OK</string>
    <string name="okimage">okimage</string>
    <string name="top_1">Top 1</string>
    <string name="top_2">Top 2</string>
    <string name="top_3">Top 3</string>
    <string name="top_4">Top 4</string>
    <string name="top_5">Top 5</string>
    <string name="top_6">Top 6</string>
    <string name="top_7">Top 7</string>
    <string name="top_8">Top 8</string>
    <string name="top_9">Top 9</string>
    <string name="top_10">Top 10</string>
    <string name="top_11">Top 11</string>
    <string name="top_12">Top 12</string>
    <string name="top_13">Top 13</string>
    <string name="top_14">Top 14</string>
    <string name="top_15">Top 15</string>
    <string name="top_16">Top 16</string>
    <string name="top_17">Top 17</string>
    <string name="top_18">Top 18</string>
    <string name="top_19">Top 19</string>
    <string name="top_20">Top 20</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="score">Score</string>
    <string name="back">Back</string>
    <string name="choose_your_difficulty">Choose your difficulty:</string>
    <string name="easy_1_10">Easy (1-10)</string>
    <string name="medium_1_50">MEDIUM (1-50)</string>
    <string name="hard_1_100">HARD (1-100)</string>
    <string name="leaderboards">Leaderboards</string>
    <string name="weather_icon">Weather icon</string>
    <string name="city">City</string>
    <string name="guess_the_number">Guess the number</string>
    <string name="cond">cond</string>
    <string name="temp">Temp</string>
    <string name="winddeg">windDeg</string>
    <string name="windspeed">windSpeed</string>
    <string name="press">press</string>
    <string name="humidity">humidity</string>
    <string-array name="planets_array">
        <item>London,UK</item>
        <item>Toronto,CA</item>
        <item>Japan,JP</item>
        <item>People’s Republic of China,CN</item>
        <item>California,US</item>
        <item>Federative Republic of Brazil,BR</item>
        <item>Kingdom of Spain,ES</item>
        <item>Republic of France,FR</item>
    </string-array>
</resources>