<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LeaderboardsPage">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="176dp"
        android:layout_height="61dp"
        android:background="@color/black"
        android:text="@string/leaderboard"
        android:textAlignment="center"
        android:textColor="#FBFBFB"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07" />

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="500dp"
        android:background="@drawable/text_drawrectangleborder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/score1"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:text="@string/top_1"
                android:textAlignment="center"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/score2"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:text="@string/top_2"
                android:textAlignment="center"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/score3"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:text="@string/top_3"
                android:textAlignment="center"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/score4"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:text="@string/top_4"
                android:textAlignment="center"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/score5"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:text="@string/top_5"
                android:textAlignment="center"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/score6"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:text="@string/top_6"
                android:textAlignment="center"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/score7"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:text="@string/top_7"
                android:textAlignment="center"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/score8"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:text="@string/top_8"
                android:textAlignment="center"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/score9"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:text="@string/top_9"
                android:textAlignment="center"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/score10"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:text="@string/top_10"
                android:textAlignment="center"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/score11"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:text="@string/top_11"
                android:textAlignment="center"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/score12"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:text="@string/top_12"
                android:textAlignment="center"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/score13"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:text="@string/top_13"
                android:textAlignment="center"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/score14"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:text="@string/top_14"
                android:textAlignment="center"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/score15"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:text="@string/top_15"
                android:textAlignment="center"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/score16"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:text="@string/top_16"
                android:textAlignment="center"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/score17"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:text="@string/top_17"
                android:textAlignment="center"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/score18"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:text="@string/top_18"
                android:textAlignment="center"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/score19"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:text="@string/top_19"
                android:textAlignment="center"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/score20"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:text="@string/top_20"
                android:textAlignment="center"
                android:textSize="34sp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textColor="@color/white"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.96" />
</androidx.constraintlayout.widget.ConstraintLayout>