<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="272dp"
        android:layout_height="213dp"
        android:background="@drawable/text_drawrectangleborder"
        android:text="@string/new_top10"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.598" />

    <EditText
        android:id="@+id/name_input"
        android:layout_width="148dp"
        android:layout_height="57dp"
        android:autofillHints="Enter your name"
        android:background="@drawable/text_drawrectangleborder"
        android:inputType="textPersonName"
        android:text="@string/enter_name_here"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.724"
        tools:ignore="LabelFor" />

    <ImageButton
        android:id="@+id/add_scorebutton"
        android:layout_width="62dp"
        android:layout_height="61dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/text_drawcircleborder"
        android:contentDescription="@string/okimage"
        android:text="@string/ok_button"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.852"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.717"
        app:srcCompat="@drawable/image_okbutton" />

</androidx.constraintlayout.widget.ConstraintLayout>